--- a/service/Gemfile
+++ b/service/Gemfile
@@ -4,4 +4,6 @@ source "https://rubygems.org"
 
 git_source(:github) { |repo_name| "https://github.com/#{repo_name}" }
 
-# gem "rails"
+gem "sinatra", "~> 2.1"
+gem "puma", "~> 5.2"
+gem "rubocop", "~> 1.12"
